zobrazene statistiky o lodi

--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,7 +98,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=198,Y=49)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -125,15 +125,15 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1629,Y=1010)
+LastSize=(X=1936,Y=1090)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=198,Y=49)
-NewWindowWidth=1629
-NewWindowHeight=1010
+MultipleInstancePositions=(X=0,Y=0)
+NewWindowWidth=1936
+NewWindowHeight=1090
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -375,7 +375,7 @@ GameplayDebuggerUserSettings=EnhancedInputDeveloperSettings.Modifier Default Val
 GameplayTagsDeveloperSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RudderControls,InputSettings.Bindings.ActionMappings.Rudder Controls,InputSettings.Bindings.ActionMappings.Extra Camera Swapping,InputSettings.Bindings.ActionMappings.Swap To Chase Camera,InputSettings.Bindings.ActionMappings.DEBUG BOAT SWAP,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RudderControls,InputSettings.Bindings.AxisMappings.RudderAxis,InputSettings.Bindings.AxisMappings.Rudder Axis,InputSettings.Bindings.AxisMappings.Sail Tension Axis,InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS
 LogVisualizerSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RudderControls,InputSettings.Bindings.ActionMappings.Rudder Controls,InputSettings.Bindings.ActionMappings.Extra Camera Swapping,InputSettings.Bindings.ActionMappings.Swap To Chase Camera,InputSettings.Bindings.ActionMappings.DEBUG BOAT SWAP,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RudderControls,InputSettings.Bindings.AxisMappings.RudderAxis,InputSettings.Bindings.AxisMappings.Rudder Axis,InputSettings.Bindings.AxisMappings.Sail Tension Axis,InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS
 StaticMeshActor=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
-RegattaUI_C=
+RegattaUI_C=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 BPRegattaController_C=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 K2Node_GetInputAxisValue=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 K2Node_InputAxisEvent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
@@ -415,7 +415,7 @@ Transform Additional Cameras From Config=StaticMeshComponent.Collision.Collision
 Transform Additional Cameras From Config_34=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 CameraActor=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 ConfigurationMenu_C=
-MinimapWidget_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
+MinimapWidget_C=
 K2Node_InputKey=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 PlayerController=
 BP_Wall_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
@@ -435,7 +435,7 @@ MaterialInstanceConstant=
 Image=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 
 [EditorStartup]
-LastLevel=/Game/Levels/LVTesting
+LastLevel=/Game/Levels/MainMenuMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
@@ -666,7 +666,7 @@ Visual="\"Object\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.BackgroundImage.OutlineSettings\" \"Object.Appearance.FillColorAndOpacity\" "
 EdGraphNode_Comment="\"Object\" "
 RegattaUI_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Layout.Slot\" "
+UserWidget="\"Object\" "
 RadialSlider="\"Object\" \"Object.Appearance.SliderProgressColor\" \"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" "
 SpringArmComponent="\"Object\" "
 SceneCaptureComponent2D="\"Object\" "
@@ -699,11 +699,11 @@ MaterialExpressionAdd="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MinimapWidget_C="\"Object\" \"Object.Layout.Slot\" "
+MinimapWidget_C="\"Object\" "
 Button="\"Object\" \"Object.Layout.Slot\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot\" "
-TextBlock="\"Object\" \"Object.Layout.Slot\" "
-TextLayoutWidget="\"Object\" \"Object.Layout.Slot\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 ConfigurationMenu_C="\"Object\" "
 OrthogonalMapWidget_C="\"Object\" \"Object.Layout.Slot\" "
 K2Node_InputKey="\"Object\" "
@@ -865,8 +865,8 @@ StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
 StaticMeshComponent.Materials=True
-PropertyWrapper.Variable=True
-PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Variable=False
+PropertyWrapper.DefaultValueCategory=False
 BoxComponent.Variable=True
 BoxComponent.TransformCommon=True
 BoxComponent.Sockets=True
@@ -1985,6 +1985,9 @@ MainMenuMap_C.Events=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1994,17 +1997,14 @@ RecentAssetEditors=
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2018,7 +2018,9 @@ RecentAssetEditors=SpriteEditor
 OpenAssetsAtExit=/Game/Map/MapGenerator.MapGenerator
 OpenAssetsAtExit=/Game/Map/BP_Tile.BP_Tile
 OpenAssetsAtExit=/Game/Map/BP_Wall.BP_Wall
-OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
+OpenAssetsAtExit=/Game/Map/BP_Start.BP_Start
+OpenAssetsAtExit=/Game/Blueprints/Regatta/RegattaUI.RegattaUI
+OpenAssetsAtExit=/Game/Minimap/MinimapWidget.MinimapWidget
 
 [MessageLog]
 LastLogListing=PIE
@@ -2036,7 +2038,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Levels
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2044,16 +2046,16 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Levels
-ContentBrowserDrawer.JumpMRU=/All/Game/Map
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/UI
+ContentBrowserDrawer.JumpMRU=/All/Game/Minimap
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta
+ContentBrowserDrawer.JumpMRU=/All/Game/Map
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/Levels
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/CinematicCamera
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Gamemodes
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Minimap
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/OrthogonalMap
@@ -2094,26 +2096,26 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Regatta/BPRegatta
-MRUItem1=/Game/Map/BP_Wall
-MRUItem2=/Game/Map/BP_Tile
-MRUItem3=/Game/Map/MapGenerator
-MRUItem4=/Game/Levels/MainMenuMap
-MRUItem5=/Game/Levels/RaceMap
-MRUItem6=/Game/Map/RaceStructure
-MRUItem7=/Game/Map/RaceDataTable
-MRUItem8=/Game/Blueprints/SailingGameInstance
-MRUItem9=/Game/Minimap/MinimapWidget
-MRUItem10=/Game/Minimap/MinimapMaterial_Inst
-MRUItem11=/Game/Minimap/MinimapMaterial
-MRUItem12=/Game/Map/BP_Start
-MRUItem13=/Game/Map/BP_Buoy
-MRUItem14=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem15=/Game/Blueprints/UI/MainMenu
-MRUItem16=/Game/Blueprints/UI/ConfigurationMenu
-MRUItem17=/Game/Blueprints/Regatta/SnapshotsTarget
-MRUItem18=/Game/Blueprints/CinematicCamera/CinematicCameraActor
-MRUItem19=/Game/Blueprints/Regatta/RegattaUI
+MRUItem0=/Game/Minimap/MinimapWidget
+MRUItem1=/Game/Map/BP_Start
+MRUItem2=/Game/Blueprints/Regatta/RegattaUI
+MRUItem3=/Game/Blueprints/Regatta/BPRegatta
+MRUItem4=/Game/Map/BP_Wall
+MRUItem5=/Game/Map/BP_Tile
+MRUItem6=/Game/Map/MapGenerator
+MRUItem7=/Game/Levels/MainMenuMap
+MRUItem8=/Game/Levels/RaceMap
+MRUItem9=/Game/Map/RaceStructure
+MRUItem10=/Game/Map/RaceDataTable
+MRUItem11=/Game/Blueprints/SailingGameInstance
+MRUItem12=/Game/Minimap/MinimapMaterial_Inst
+MRUItem13=/Game/Minimap/MinimapMaterial
+MRUItem14=/Game/Map/BP_Buoy
+MRUItem15=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem16=/Game/Blueprints/UI/MainMenu
+MRUItem17=/Game/Blueprints/UI/ConfigurationMenu
+MRUItem18=/Game/Blueprints/Regatta/SnapshotsTarget
+MRUItem19=/Game/Blueprints/CinematicCamera/CinematicCameraActor
 MRUItem20=/Game/Map/PhysicsEngine
 MRUItem21=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem22=/Game/Blueprints/Gamemodes/RegattaTesting
@@ -2507,8 +2509,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2539,7 +2541,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=22.400
-WindowSize=X=1282.400 Y=708.000
+WindowSize=X=1284.000 Y=709.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
