--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=3
+PreviewFeatureLevel=4
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -435,7 +435,7 @@ MaterialInstanceConstant=
 Image=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 
 [EditorStartup]
-LastLevel=/Game/Levels/RaceMap
+LastLevel=/Game/Levels/MainMenuMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
@@ -1986,11 +1986,13 @@ RaceStructure.None=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2004,9 +2006,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
@@ -2019,6 +2019,8 @@ RecentAssetEditors=SpriteEditor
 OpenAssetsAtExit=/Game/Map/MapGenerator.MapGenerator
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
 OpenAssetsAtExit=/Game/Blueprints/SailingGameInstance.SailingGameInstance
+OpenAssetsAtExit=/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor
+OpenAssetsAtExit=/Engine/EditorBlueprintResources/StandardMacros.StandardMacros
 
 [MessageLog]
 LastLogListing=PIE
@@ -2036,7 +2038,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Levels
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/CinematicCamera
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2044,16 +2046,16 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Levels
-ContentBrowserDrawer.JumpMRU=/All/Game/Map
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/CinematicCamera
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Map
+ContentBrowserDrawer.JumpMRU=/All/Game/Levels
 ContentBrowserDrawer.JumpMRU=/All/Game/Minimap
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/CinematicCamera
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Gamemodes
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/OrthogonalMap
@@ -2094,28 +2096,28 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/SailingGameInstance
-MRUItem1=/Game/Blueprints/Regatta/BPRegatta
-MRUItem2=/Game/Map/MapGenerator
-MRUItem3=/Game/Levels/RaceMap
-MRUItem4=/Game/Map/RaceDataTable
-MRUItem5=/Game/Map/RaceStructure
-MRUItem6=/Game/Map/BP_Wall
-MRUItem7=/Game/Map/BP_Tile
-MRUItem8=/Game/Levels/MainMenuMap
-MRUItem9=/Game/Minimap/MinimapWidget
-MRUItem10=/Game/Minimap/MinimapMaterial_Inst
-MRUItem11=/Game/Minimap/MinimapMaterial
-MRUItem12=/Game/Map/BP_Start
-MRUItem13=/Game/Map/BP_Buoy
-MRUItem14=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem15=/Game/Blueprints/UI/MainMenu
-MRUItem16=/Game/Blueprints/UI/ConfigurationMenu
-MRUItem17=/Game/Blueprints/Regatta/SnapshotsTarget
-MRUItem18=/Game/Blueprints/CinematicCamera/CinematicCameraActor
-MRUItem19=/Game/Blueprints/Regatta/RegattaUI
-MRUItem20=/Game/Map/PhysicsEngine
-MRUItem21=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem0=/Game/Map/RaceDataTable
+MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem2=/Game/Blueprints/CinematicCamera/CinematicCameraActor
+MRUItem3=/Game/Blueprints/SailingGameInstance
+MRUItem4=/Game/Blueprints/Regatta/BPRegatta
+MRUItem5=/Game/Map/MapGenerator
+MRUItem6=/Game/Levels/RaceMap
+MRUItem7=/Game/Map/RaceStructure
+MRUItem8=/Game/Map/BP_Wall
+MRUItem9=/Game/Map/BP_Tile
+MRUItem10=/Game/Levels/MainMenuMap
+MRUItem11=/Game/Minimap/MinimapWidget
+MRUItem12=/Game/Minimap/MinimapMaterial_Inst
+MRUItem13=/Game/Minimap/MinimapMaterial
+MRUItem14=/Game/Map/BP_Start
+MRUItem15=/Game/Map/BP_Buoy
+MRUItem16=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem17=/Game/Blueprints/UI/MainMenu
+MRUItem18=/Game/Blueprints/UI/ConfigurationMenu
+MRUItem19=/Game/Blueprints/Regatta/SnapshotsTarget
+MRUItem20=/Game/Blueprints/Regatta/RegattaUI
+MRUItem21=/Game/Map/PhysicsEngine
 MRUItem22=/Game/Blueprints/Gamemodes/RegattaTesting
 MRUItem23=/Game/Levels/LV_Testing2
 MRUItem24=/Game/Minimap/scroll
@@ -2534,14 +2536,14 @@ bShowParentClassInOverrides=True
 bShowEmptySections=True
 bShowAccessSpecifier=False
 Bookmarks=()
-PerBlueprintSettings=(("/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController", (Breakpoints=((Node="/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController:EventGraph.K2Node_InputAxisEvent_0"),(Node="/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController:EventGraph.K2Node_MacroInstance_1"),(Node="/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController:EventGraph.K2Node_InputAction_1"),(Node="/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController:EventGraph.K2Node_CallFunction_7")))),("/Game/Blueprints/Regatta/BPRegatta.BPRegatta", (Breakpoints=((Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:Find Data Tile.K2Node_FunctionEntry_0"),(Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:EventGraph.K2Node_ExecutionSequence_0"),(Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:EventGraph.K2Node_CallFunction_13"),(Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:EventGraph.K2Node_CallFunction_7"),(Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:EventGraph.K2Node_IfThenElse_0")))),("/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor", (Breakpoints=((Node="/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor:EventGraph.K2Node_CallFunction_11"),(Node="/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor:EventGraph.K2Node_CallFunction_4")))))
+PerBlueprintSettings=(("/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController", (Breakpoints=((Node="/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController:EventGraph.K2Node_InputAxisEvent_0"),(Node="/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController:EventGraph.K2Node_MacroInstance_1"),(Node="/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController:EventGraph.K2Node_InputAction_1"),(Node="/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController:EventGraph.K2Node_CallFunction_7")))),("/Game/Blueprints/Regatta/BPRegatta.BPRegatta", (Breakpoints=((Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:Find Data Tile.K2Node_FunctionEntry_0"),(Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:EventGraph.K2Node_ExecutionSequence_0"),(Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:EventGraph.K2Node_CallFunction_13"),(Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:EventGraph.K2Node_CallFunction_7"),(Node="/Game/Blueprints/Regatta/BPRegatta.BPRegatta:EventGraph.K2Node_IfThenElse_0")))),("/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor", (Breakpoints=((Node="/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor:EventGraph.K2Node_CallFunction_11"),(Node="/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor:EventGraph.K2Node_CallFunction_4"),(Node="/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor:EventGraph.K2Node_CallFunction_0"),(Node="/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor:Load Control Points From Config.K2Node_GetDataTableRow_0")))))
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=22.400
-WindowSize=X=1284.000 Y=709.600
+ScreenPosition=X=0.000 Y=22.000
+WindowSize=X=1284.000 Y=710.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3715,9 +3717,9 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/More Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/More Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [InputDebuggingEditor]
 SuppressInputDeviceConnectionChangeNotification=True
