upravene veci pre zadavatela
sprite lode je nasmerovany smerom smerovania lode, nie plachty
pre kus lepsi performance sa minimapaka nenastavuje v ticku, ale iba ked sa prepina lod
odpor vody je mensi pri otacani lode

--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,15 +125,15 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1631,Y=990)
+LastSize=(X=1649,Y=1088)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=198,Y=49)
-NewWindowWidth=1631
-NewWindowHeight=990
+NewWindowWidth=1649
+NewWindowHeight=1088
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -440,7 +440,7 @@ LastLevel=/Game/Levels/MainMenuMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Collision.BodyInstance\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -661,8 +661,8 @@ MaterialExpressionMultiply="\"Object\" "
 MaterialExpressionComment="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Layout.Slot\" "
+Visual="\"Object\" \"Object.Layout.Slot\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.BackgroundImage.OutlineSettings\" \"Object.Appearance.FillColorAndOpacity\" "
 EdGraphNode_Comment="\"Object\" "
 RegattaUI_C="\"Object\" "
@@ -676,7 +676,7 @@ TextureRenderTarget="\"Object\" "
 Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 Image="\"Object\" "
-PaperSpriteComponent="\"Object\" "
+PaperSpriteComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 Texture2D="\"Object\" "
 PaperSprite="\"Object\" "
 BodySetup="\"Object\" "
@@ -1259,7 +1259,7 @@ UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
 K2Node_InputAxisEvent.Input=True
-EdGraph.Inputs=True
+EdGraph.Inputs=False
 EdGraph.Outputs=True
 PropertyWrapper.Events=True
 K2Node_VariableGet.Variable=True
@@ -1986,18 +1986,18 @@ RaceStructure.None=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
@@ -2016,11 +2016,9 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=SpriteEditor
-OpenAssetsAtExit=/Game/Map/MapGenerator.MapGenerator
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
+OpenAssetsAtExit=/Game/Minimap/MinimapWidget.MinimapWidget
 OpenAssetsAtExit=/Game/Blueprints/SailingGameInstance.SailingGameInstance
-OpenAssetsAtExit=/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor
-OpenAssetsAtExit=/Engine/EditorBlueprintResources/StandardMacros.StandardMacros
 
 [MessageLog]
 LastLogListing=PIE
@@ -2038,7 +2036,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/CinematicCamera
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2046,15 +2044,15 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/CinematicCamera
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/UI
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Gamemodes
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/CinematicCamera
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Map
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels
 ContentBrowserDrawer.JumpMRU=/All/Game/Minimap
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Gamemodes
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/Game
@@ -2096,18 +2094,18 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Map/RaceDataTable
-MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem2=/Game/Blueprints/CinematicCamera/CinematicCameraActor
-MRUItem3=/Game/Blueprints/SailingGameInstance
+MRUItem0=/Game/Minimap/MinimapWidget
+MRUItem1=/Game/Blueprints/SailingGameInstance
+MRUItem2=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem3=/Game/Blueprints/CinematicCamera/CinematicCameraActor
 MRUItem4=/Game/Blueprints/Regatta/BPRegatta
 MRUItem5=/Game/Map/MapGenerator
-MRUItem6=/Game/Levels/RaceMap
-MRUItem7=/Game/Map/RaceStructure
-MRUItem8=/Game/Map/BP_Wall
-MRUItem9=/Game/Map/BP_Tile
-MRUItem10=/Game/Levels/MainMenuMap
-MRUItem11=/Game/Minimap/MinimapWidget
+MRUItem6=/Game/Map/RaceDataTable
+MRUItem7=/Game/Levels/RaceMap
+MRUItem8=/Game/Map/RaceStructure
+MRUItem9=/Game/Map/BP_Wall
+MRUItem10=/Game/Map/BP_Tile
+MRUItem11=/Game/Levels/MainMenuMap
 MRUItem12=/Game/Minimap/MinimapMaterial_Inst
 MRUItem13=/Game/Minimap/MinimapMaterial
 MRUItem14=/Game/Map/BP_Start
@@ -2387,6 +2385,7 @@ CanvasPanel.Accessibility=False
 CanvasPanel.Behavior=False
 Image.Accessibility=False
 Button.Accessibility=True
+EdGraph.Graph=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2511,8 +2510,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2543,7 +2542,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=22.000
-WindowSize=X=1284.000 Y=710.000
+WindowSize=X=1276.000 Y=712.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3717,9 +3716,9 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/More Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [InputDebuggingEditor]
 SuppressInputDeviceConnectionChangeNotification=True
