viac rozlišne hodnoty vetra v konfiguraku

--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,14 +125,14 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1631,Y=990)
+LastSize=(X=1647,Y=990)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=198,Y=49)
-NewWindowWidth=1631
+NewWindowWidth=1647
 NewWindowHeight=990
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
@@ -435,7 +435,7 @@ MaterialInstanceConstant=
 Image=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 
 [EditorStartup]
-LastLevel=/Game/Levels/RaceMap
+LastLevel=/Game/Levels/MainMenuMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
@@ -1986,11 +1986,11 @@ RaceStructure.None=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2019,6 +2019,7 @@ RecentAssetEditors=SpriteEditor
 OpenAssetsAtExit=/Game/Map/MapGenerator.MapGenerator
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
 OpenAssetsAtExit=/Game/Blueprints/SailingGameInstance.SailingGameInstance
+OpenAssetsAtExit=/Game/Map/RaceDataTable.RaceDataTable
 
 [MessageLog]
 LastLogListing=PIE
@@ -2094,11 +2095,11 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/SailingGameInstance
-MRUItem1=/Game/Blueprints/Regatta/BPRegatta
-MRUItem2=/Game/Map/MapGenerator
-MRUItem3=/Game/Levels/RaceMap
-MRUItem4=/Game/Map/RaceDataTable
+MRUItem0=/Game/Map/RaceDataTable
+MRUItem1=/Game/Blueprints/SailingGameInstance
+MRUItem2=/Game/Blueprints/Regatta/BPRegatta
+MRUItem3=/Game/Map/MapGenerator
+MRUItem4=/Game/Levels/RaceMap
 MRUItem5=/Game/Map/RaceStructure
 MRUItem6=/Game/Map/BP_Wall
 MRUItem7=/Game/Map/BP_Tile
@@ -2190,7 +2191,7 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 /Game/Minimap/MinimapMaterial_Inst.MinimapMaterial_Inst=1
 /Game/Levels/MainMenuMap.MainMenuMap:PersistentLevel.MainMenuMap=1
 /Game/Map/RaceStructure.RaceStructure=1
-/Game/Map/RaceDataTable.RaceDataTable=1
+/Game/Map/RaceDataTable.RaceDataTable=0
 
 [MaterialEditor]
 PrimType=1
@@ -2509,8 +2510,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2541,7 +2542,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=22.400
-WindowSize=X=1284.000 Y=709.600
+WindowSize=X=1285.600 Y=711.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
